MYPLAN-3153  text which shows the source of login gets wrapped up in IE, firefox . fixed with a style change

--- a/myplan-web/src/main/webapp/themes/ksap/stylesheets/global.less
+++ b/myplan-web/src/main/webapp/themes/ksap/stylesheets/global.less
@@ -248,6 +248,7 @@ button, a {
 
 .login_source{
   width: 138px;
+  font-size: 11px;
   text-align: center;
   color: @white;
   padding: 5px;
